2003-04-18  Bastien Nocera  <hadess@hadess.net>

	* src/scrsaver.c: (fake_event), (scrsaver_init),
	(scrsaver_disable), (scrsaver_enable): plenty of display locking around
	all that, and use XSync, not XFlush
	* src/totem-video-thumbnailer.c: (main): enable threads all the time

2003-04-18  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* data/totem.glade:
	* src/totem.c: (totem_action_exit), (on_show_controls1_activate),
	(on_show_controls2_activate), (totem_action_handle_key),
	(totem_callback_connect): added controls to show/hide everything but
	the video canvas

2003-04-18  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* data/totem.glade:
	* src/totem.c: (totem_action_set_mrl), (update_seekable),
	(on_video_button_press_event), (update_buttons),
	(totem_callback_connect), (video_widget_create): added a popup menu
	on the canvas, for right click

2003-04-18  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_set_proprietary_plugins_path):
	* src/bacon-video-widget-xine.c: (setup_config),
	(bacon_video_widget_set_media_device),
	(bacon_video_widget_set_proprietary_plugins_path):
	* src/bacon-video-widget.h:
	* src/totem-preferences.c: (hide_prefs), (on_checkbutton1_toggled),
	(on_checkbutton2_toggled), (on_combo_entry1_changed),
	(auto_resize_changed_cb), (show_vfx_changed_cb),
	(mediadev_changed_cb), (option_menu_connection_changed),
	(on_button1_clicked), (totem_setup_preferences): added an "Add
	proprietary plugins" button to the preferences, make the xine backend
	use this path (Closes: #110384)

2003-04-18  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_class_init): We do
	no need those callbacks as the widget will forward those events.
	* src/totem.c: (totem_action_exit): Added sanity checks before
	destroying widgets that might not exist.

2003-04-18  Bastien Nocera  <hadess@hadess.net>

	* configure.in: